[package]
name = "radar_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
time = "0.3.37"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
bytes = "1.9.0"
image = "0.25.5"
rand = "0.9.0-beta.1"
futures = "0.3.31"
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4.39"
